resolve vertical align issue for flexbox on all browsers

--- a/site.css
+++ b/site.css
@@ -56,11 +56,15 @@ ul {
 .top {
   width: 100%;
   color: #ffffff;
-  display: flex;
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
   display: -webkit-flex;   
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-flex-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
   align-items: center;
   justify-content: space-around;
 }
